--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
     "@reduxjs/toolkit": "^2.7.0",
+    "audit": "^0.0.6",
     "next": "15.3.1",
     "radix-ui": "^1.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-redux": "^9.2.0",
-    "redux-saga": "^1.3.0"
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
