--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@reduxjs/toolkit": "^2.7.0",
     "audit": "^0.0.6",
+    "axios": "^1.9.0",
     "next": "15.3.1",
     "radix-ui": "^1.4.1",
     "react": "^19.0.0",
